--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <FinalName>${project.artifactId}-{project.version}</FinalName
+                <finalName>${project.artifactId}-{project.version}</finalName>
             </plugin>
         </plugins>
     </build>
