--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.coursework</groupId>
-    <artifactId>Coursework</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <groupId>org.springframework.samples</groupId>
+    <artifactId>spring-petclinic</artifactId>
+    <version>2.4.5</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
