--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
   <name>spring-petclinic</name>
-  <version>1.1</version>
+  <version>2.4.5</version>
  <build>
 
-            <finalName>${project.name}##${project.version}.${BUILD_NUMBER}</finalName>
+            <finalName>${project.name}.${project.version}.${BUILD_NUMBER}</finalName>
     </build>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>${Version}</version>
+    <version>$2.4.5</version>
   </parent>
-  <name>${project.artifactID}-${project.version}</name>
+  <name>petclinic</name>
 
   <properties>
 
