--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
   <artifactId>spring-petclinic</artifactId>
   <name>spring-petclinic</name>
   <version>2.4.5</version>
+ 
  <build>
-
-            <finalName>${project.name}.${project.version}.${BUILD_NUMBER}</finalName>
+     <finalName>${project.name}.${project.version}.${BUILD_NUMBER}</finalName>
     </build>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>$2.4.5</version>
+    <version>2.4.5</version>
   </parent>
   <name>petclinic</name>
 
